[package]
name = "actix-mw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
futures-util = "0.3.28"
futures-core = "0.3.28"
pin-project-lite = "0.2.11"
chrono = { verion = "0.4.26", optional = true }
sha2 = { version = "0.10.7", optional = true }
hex = { version = "0.4.3", optional = true }
log = "0.4.19"

[features]
csrf = ["chrono", "sha2", "hex"]
